--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>neoui-react-button</title>
+    <title>AcHandTable</title>
     <!-- <link rel="stylesheet" href="./dist/demo.css"> -->
     <link href="//design.yonyoucloud.com/static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
 </head>
