--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>neoui-react-button</title>
+    <title>AcHandTable</title>
     <!-- <link rel="stylesheet" href="./dist/demo.css"> -->
     <link href="//design.yonyoucloud.com/static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
 <link href="/ac-hand-table/styles.css" rel="stylesheet"></head>
@@ -18,5 +18,5 @@
 <script src="//design.yonyoucloud.com/static/react/16.8.4/umd/react.production.min.js"></script>
 <script src="//design.yonyoucloud.com/static/react/16.8.4/umd/react-dom.production.min.js"></script>
 <script src="//design.yonyoucloud.com/static/prop-types/15.6.0/prop-types.min.js"></script>
-<script type="text/javascript" src="/ac-hand-table/manifest.ab8bfebb25e88444f876.js"></script><script type="text/javascript" src="/ac-hand-table/styles.ab8bfebb25e88444f876.js"></script><script type="text/javascript" src="/ac-hand-table/vendor.ab8bfebb25e88444f876.js"></script><script type="text/javascript" src="/ac-hand-table/app.ab8bfebb25e88444f876.js"></script></body>
+<script type="text/javascript" src="/ac-hand-table/manifest.1bfc4282382562b481ab.js"></script><script type="text/javascript" src="/ac-hand-table/styles.1bfc4282382562b481ab.js"></script><script type="text/javascript" src="/ac-hand-table/vendor.1bfc4282382562b481ab.js"></script><script type="text/javascript" src="/ac-hand-table/app.1bfc4282382562b481ab.js"></script></body>
 </html>
