--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>AcHandTable</title>
     <!-- <link rel="stylesheet" href="./dist/demo.css"> -->
     <link href="//design.yonyoucloud.com/static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
+    <link href="//design.yonyoucloud.com/static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
 </head>
 <body style="background: #eceff1">
 <div id="root"></div>
