--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>AcHandTable</title>
     <!-- <link rel="stylesheet" href="./dist/demo.css"> -->
     <link href="//design.yonyoucloud.com/static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
+    <link href="//design.yonyoucloud.com/static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
 <link href="/ac-hand-table/styles.css" rel="stylesheet"></head>
 <body style="background: #eceff1">
 <div id="root"></div>
@@ -18,5 +19,5 @@
 <script src="//design.yonyoucloud.com/static/react/16.8.4/umd/react.production.min.js"></script>
 <script src="//design.yonyoucloud.com/static/react/16.8.4/umd/react-dom.production.min.js"></script>
 <script src="//design.yonyoucloud.com/static/prop-types/15.6.0/prop-types.min.js"></script>
-<script type="text/javascript" src="/ac-hand-table/manifest.08cb7247aebe285f4fdc.js"></script><script type="text/javascript" src="/ac-hand-table/styles.08cb7247aebe285f4fdc.js"></script><script type="text/javascript" src="/ac-hand-table/vendor.08cb7247aebe285f4fdc.js"></script><script type="text/javascript" src="/ac-hand-table/app.08cb7247aebe285f4fdc.js"></script></body>
+<script type="text/javascript" src="/ac-hand-table/manifest.63fcc489357d5efbc63a.js"></script><script type="text/javascript" src="/ac-hand-table/styles.63fcc489357d5efbc63a.js"></script><script type="text/javascript" src="/ac-hand-table/vendor.63fcc489357d5efbc63a.js"></script><script type="text/javascript" src="/ac-hand-table/app.63fcc489357d5efbc63a.js"></script></body>
 </html>
